fix : nowrap

--- a/assets/css/rgaa.css
+++ b/assets/css/rgaa.css
@@ -118,7 +118,6 @@ body {
   text-decoration: underline;
   padding: 5px 20px;
   color: #6C6185;
-  white-space:nowrap;
   display: block;
 }
 
